feat: Add multiple edge case tests for match handling